k8s-deploy/kubefate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubefate
  namespace: kube-fate
  labels:
    fate: kubefate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      fate: kubefate
  template:
    metadata:
      labels:
        fate: kubefate
    spec:
      serviceAccountName: kubefate-admin
      containers:
        - image: federatedai/kubefate:v1.3.0
          imagePullPolicy: IfNotPresent
          name: kubefate
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: kube-fate
  labels:
    fate: mariadb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      fate: mariadb
  template:
    metadata:
      labels:
        fate: mariadb
    spec:
      containers:
        - image: mariadb:10
          imagePullPolicy: IfNotPresent
          name: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: mariadb-data
          hostPath:
            path: /home/kubefate/mysql/db
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: kube-fate
  labels:
    fate: mariadb
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP
  selector:
    fate: mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: kubefate
  namespace: kube-fate
  labels:
    fate: kubefate
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    fate: kubefate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubefate
  namespace: kube-fate
spec:
  rules:
    - host: kubefate.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubefate
                port: 
                  number: 8080
